@@ -1,3 +1,10 @@
+2011-04-08  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * scintilla/lexers/LexCPP.cxx:
+   Make hightlighting of triple-quoted verbatim an option (Backport
+   from Scintilla HG 3602:5536ed81a85b).
+
+
 2011-04-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/templates.c:
